rsnps 0.1.6
===============

MINOR IMPROVEMENTS

* All examples now in `\dontrun`. (#11)
* Added additional tests for `LDSearch()` and `NCBI_snp_query()`.
* Added a vignette.

BUG FIXES

* Bugs fixed in `LDSearch()`, which were actually bugs in `NCBI_snp_query()`. (#9)

rsnps 0.1.0
===============

NEW FEATURES 

* Bug fixes to all openSNP functions.

rsnps 0.0.5
===============

NEW FEATURES 

* released to CRAN