@@ -10,6 +10,7 @@ MINOR IMPROVEMENTS
 BUG FIXES
 
 * Bugs fixed in `LDSearch()`, which were actually bugs in `NCBI_snp_query()`. (#9)
+* Bug fixed in `NCBI_snp_query()` as chromosome might also be "X". 
 
 rsnps 0.1.0
 ===============
